--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
-    "react-motion": "^0.5.0"
+    "react-motion": "^0.5.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "dev": "next",
