--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-     "heroku-postbuild": "next build"
+    "start": "next start"
   }
 }
