--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "material-ui": "^0.18.1",
+    "micro": "lastest",
     "next": "^2.4.1",
+    "now": "^6.3.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
@@ -18,7 +20,6 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p ${PORT}",
-    "heroku-postbuild": "next build"
+    "start": "next start"
   }
 }
