--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "now-build": "next build",
+    "now-start": "next start"
   }
 }
