--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Natasha Kelly",
   "license": "MIT",
   "dependencies": {
+    "firebase": "^4.1.1",
+    "firebase-tools": "^3.9.1",
     "material-ui": "^0.18.1",
     "next": "^2.4.1",
     "react": "^15.5.4",
