--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "firebase": "^4.1.1",
     "firebase-tools": "^3.9.1",
     "material-ui": "^0.18.1",
-    "next": "^2.4.1",
+    "next": "*",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
